tests/baselines/reference/destructureTupleWithVariableElement.errors.txt
destructureTupleWithVariableElement.ts(9,1): error TS2684: The 'this' context of type 'string | undefined' is not assignable to method's 'this' of type 'string'.
  Type 'undefined' is not assignable to type 'string'.
destructureTupleWithVariableElement.ts(9,1): error TS18048: 's1' is possibly 'undefined'.
destructureTupleWithVariableElement.ts(10,1): error TS2684: The 'this' context of type 'string | undefined' is not assignable to method's 'this' of type 'string'.
  Type 'undefined' is not assignable to type 'string'.
destructureTupleWithVariableElement.ts(10,1): error TS18048: 's2' is possibly 'undefined'.
destructureTupleWithVariableElement.ts(18,1): error TS2684: The 'this' context of type 'string | undefined' is not assignable to method's 'this' of type 'string'.
  Type 'undefined' is not assignable to type 'string'.
destructureTupleWithVariableElement.ts(18,1): error TS18048: 's5' is possibly 'undefined'.


==== destructureTupleWithVariableElement.ts (6 errors) ====
    // repro from #52302
    
    type NonEmptyStringArray = [string, ...Array<string>]
    
    const strings: NonEmptyStringArray = ['one', 'two']
    const [s0, s1, s2] = strings;
    
    s0.toUpperCase()
    s1.toUpperCase() 
    ~~
!!! error TS2684: The 'this' context of type 'string | undefined' is not assignable to method's 'this' of type 'string'.
!!! error TS2684:   Type 'undefined' is not assignable to type 'string'.
    ~~
!!! error TS18048: 's1' is possibly 'undefined'.
    s2.toUpperCase()
    ~~
!!! error TS2684: The 'this' context of type 'string | undefined' is not assignable to method's 'this' of type 'string'.
!!! error TS2684:   Type 'undefined' is not assignable to type 'string'.
    ~~
!!! error TS18048: 's2' is possibly 'undefined'.
    
    declare const strings2: [string, ...Array<string>, string]
    
    const [s3, s4, s5] = strings2;
    
    s3.toUpperCase()
    s4.toUpperCase() 
    s5.toUpperCase()
    ~~
!!! error TS2684: The 'this' context of type 'string | undefined' is not assignable to method's 'this' of type 'string'.
!!! error TS2684:   Type 'undefined' is not assignable to type 'string'.
    ~~
!!! error TS18048: 's5' is possibly 'undefined'.
    